--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,6 @@
-<div class="cv-container">
-  <app-header></app-header>
-  <app-profile></app-profile>
-  <app-skills></app-skills>
-  <app-technical></app-technical>
-  <app-footer></app-footer>
-</div>
+    <nav>
+      <a routerLink="/">Home</a>|
+      <a routerLink="/data-binding">Data-binding</a>|
+      <a routerLink="/directives">Directives</a>|
+    </nav>
+<router-outlet />
