--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,2 @@
-    <nav>
-      <a routerLink="/">Home</a>|
-      <a routerLink="/data-binding">Data-binding</a>|
-      <a routerLink="/directives">Directives</a>|
-    </nav>
+<app-pipes-demo></app-pipes-demo>
 <router-outlet />
